Fixed menu items align

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: Teddy
 Author URI: https://chezteddy.fr/
 Description: Are you looking for a simple theme to highlight your writings? Marianne is a rare minimalistic theme in an ocean of maximalism. It gives a touch of old school blogging to your site, refreshed, with customization options that make it flexible. If you believe that less graphism complexity means less distraction and more readability, this theme is made for you. Whether you are a simple blogger, a writer, a journalist or an intellectual, Marianne will delight you… and your readers.
 Tags: blog, one-column, custom-logo, custom-menu, featured-images, sticky-post, theme-options, threaded-comments, translation-ready, wide-blocks
-Version: 1.3.5
+Version: 1.3.5.1
 Requires at least: 5.3
 Tested up to: 5.7
 Requires PHP: 5.2
@@ -729,7 +729,8 @@ iframe {
 }
 .navigation-menu .menu-item:last-child {
 	border-right: 0;
-	margin-bottom: 0;
+	margin-right: 0;
+	padding-right: 0;
 }
 
 /**
@@ -1217,6 +1218,22 @@ iframe {
 }
 .site-footer-block {
 	margin-top: 1em;
+}
+.site-footer-align-center .navigation-menu .menu-item {
+
+}
+.site-footer-align-right .navigation-menu .menu-item {
+	border-right: 0;
+	border-left: 1px solid var(--color-border);
+	margin-right: 0;
+	margin-left: .5rem;
+	padding-right: 0;
+	padding-left: .5rem;
+}
+.site-footer-align-right .navigation-menu .menu-item:first-child {
+	border-left: 0;
+	margin-left: 0;
+	padding-left: 0;
 }
 
 /**
